There are some weird lines and need to fix buoyancy, but otherwise gr_swe working

--- a/Tutorials/Basic/gr_hydro/GNUmakefile
+++ b/Tutorials/Basic/gr_hydro/GNUmakefile
@@ -3,8 +3,8 @@
 AMREX_HOME ?= ../../../
 
 DEBUG     = FALSE
-USE_MPI   = FALSE
-USE_OMP   = FALSE
+USE_MPI   = TRUE
+USE_OMP   = TRUE
 COMP      = gnu
 DIM       = 3
 
