--- a/Tutorials/Amr/Advection_AmrCore/Exec/SingleVortex/GNUmakefile
+++ b/Tutorials/Amr/Advection_AmrCore/Exec/SingleVortex/GNUmakefile
@@ -1,4 +1,4 @@
-AMREX_HOME ?= ../../../..
+AMREX_HOME ?= ../../../../..
 
 PRECISION  = DOUBLE
 PROFILE    = FALSE
@@ -14,7 +14,7 @@ COMP	   = gnu
 USE_MPI    = TRUE
 USE_OMP    = FALSE
 
-Bpack   := ./Make.package 
-Blocs   := . 
+Bpack   := ./Make.package
+Blocs   := .
 
 include ../Make.Adv
